fixed alignment of track metadata form

--- a/app/assets/stylesheets/modules/forms/_base.scss
+++ b/app/assets/stylesheets/modules/forms/_base.scss
@@ -8,33 +8,93 @@ form {
   width: 80vw;
 
   li {
-    // @extend %align-self-flex-start;
-    border-bottom: $single-border $highlight-2;
+    @extend %align-self-stretch;
     list-style: none;
     margin-top: 30px;
+
+    &:not(:last-child) input[type=text] {
+      width: 100%;
+      margin-bottom: 0;
+    }
   }
 
-  .form-entry {
-    @extend %flex-h-flex-start-wrap;
-  }
-
-  label,
-  %form-label {
+  label {
     @extend %body-bold;
-    color: $text;
+    color: $gray;
     font-size: 1rem;
-    margin: 3px 0;
-    padding: 5px 7px 0;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
   }
 
-  input {
-    @extend %align-self-stretch;
-    margin: 3px 0;
-    padding: 5px 7px 0;
+  input,
+  select {
+    margin: 0;
+    padding: 5px 0 0;
+    border: 0;
+
+    &::placeholder {
+      @extend %body-bold;
+      color: $gray;
+      font-size: 1.2rem;
+    }
 
     &:focus {
-      border-bottom-color: $background;
+      outline: none;
+      background: $background;
+      border: 0;
     }
+  }
+
+  input[type=text]{
+    border-bottom: $single-border $gray-light;
+
+    &:focus {
+      border-bottom: $single-border $highlight-2;
+    }
+  }
+
+  select {
+    background: $background;
+    border: 0;
+    border-bottom: $single-border $gray-light;
+
+    &:focus {
+      border: 0;
+      border-bottom: $single-border $highlight-2;
+    }
+  }
+
+  .form-split-row-label,
+  .form-split-row-input {
+    padding: 0;
+
+    > span {
+      padding: 0;
+    }
+
+    span:first-child {
+      padding-right: 5px;
+    }
+
+    label,
+    input[type=text],
+    select {
+      position: relative;
+      width: 100%;
+    }
+  }
+
+  .form-split-row-input {
+
+
+    span:last-child {
+      position: absolute;
+      bottom: 0;
+    }
+  }
+
+  input[type=file] {
+    display: inline-block;
   }
 
   textarea {
@@ -42,25 +102,12 @@ form {
     margin-top: 3px;
     min-height: 100px;
     padding: 10px;
-    width: 100%;
   }
 }
 
-.radio-button-label {
-
-  span {
-    @extend %form-label;
-  }
-
-  label {
-    @extend %body;
-    font-size: 1rem;
-    font-style: normal;
-  }
-
-  input {
-    margin-top: 10px;
-  }
+.form-entry-nontext {
+  border: 0;
+  width: auto;
 }
 
 .submit-button {
@@ -94,5 +141,5 @@ form {
 
 .more-info {
   @extend %body-italic;
-  font-size: .8rem;
+  font-size: 1rem;
 }
